css, color rojo/verde

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <div class="btc-display">
-      <div id="btc-name"></div>
-      <div id="btc-price"></div>
-      
+      <!-- <div id="btc-name"></div> -->
+      <div id="btc-price"></div>    
+      <div id="btc-emoji"></div>
     </div>
   </body>
 </html>
